panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__preprocessor__test_extraneous_tokens_in_ifdef.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/preprocessor/test_extraneous_tokens_in_ifdef.c
---
success: true
exit_code: 0
----- stdout -----



int main() {
    puts("it works");
}

----- stderr -----
