panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__preprocessor__test_function_like_macro_called_in_itself_2.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/preprocessor/test_function_like_macro_called_in_itself_2.c
---
success: true
exit_code: 0
----- stdout -----






int main() {
    LONG( long ) LONG( another(long) LONG( int ) ) x = 42;
}

----- stderr -----
