panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__preprocessor__test_macro_calls_itself_in_va_opt_does_not_recurse.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/preprocessor/test_macro_calls_itself_in_va_opt_does_not_recurse.c
---
success: true
exit_code: 0
----- stdout -----




int main() {
    return 1 - MACRO(10, 20, 30) ;
}

----- stderr -----
