panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__preprocessor__test_standard_va_opt_example.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/preprocessor/test_standard_va_opt_example.c
---
success: true
exit_code: 0
----- stdout -----







f(0 , a, b, c )
f(0 )
f(0 )
f(0, a , b, c )
f(0, a )
f(0, a )
S foo ;
S bar = { 1, 2 } ;

----- stderr -----
